<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fec400"
    tools:context=".RegisterActivity">

    <!-- Main content layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="60dp">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/incotalk" />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/app_name" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:srcCompat="@drawable/signupimg"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:background="@drawable/edit_text_border"
                android:hint="@string/enter_fictional_name"
                android:padding="8dp"
                android:layout_marginBottom="25dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:background="@drawable/edit_text_border"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="25dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:background="@drawable/edit_text_border"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginBottom="25dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signupbtn"
                android:background="@drawable/edit_text_border"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:layout_marginHorizontal="100dp"
                android:layout_height="wrap_content"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>

    <!-- Footer Layout -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_margin="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/already_have_an_account"
            android:textAlignment="viewEnd" />


        <Button
            android:id="@+id/accountExist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
