<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#fec400"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="220dp"
            app:srcCompat="@drawable/loginlogoandnamee"
            android:layout_marginBottom="90dp"
            />



        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/LoginPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:background="@drawable/edit_text_border"
            android:hint="@string/password"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/LoginBtn"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="60dp"
            android:layout_height="wrap_content"
            android:text="Login" />


        <Button
            android:id="@+id/CreateBtn"
            android:background="@drawable/edit_text_border"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_marginHorizontal="60dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>