<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#08bd9d"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Main Content Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="#08bd9d"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#fe8900"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"

                android:layout_weight="7"
                android:layout_margin="7dp"

                app:srcCompat="@drawable/incotalk" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="100dp"

                android:layout_gravity="center"
                android:layout_weight="10"
                android:layout_marginRight="50dp"
                app:srcCompat="@drawable/grouptxtimg" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/iini"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/logoutbtn"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="5dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclergroups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <!-- Footer Buttons at the Bottom -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#08bd9d"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/JoinGroupBtn"
            android:background="@drawable/edit_text_border"
            android:layout_width="0dp"
            android:layout_marginHorizontal="4dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <Button
            android:id="@+id/CreateGroupBtn"
            android:layout_width="0dp"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/huu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
